<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#284554"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="119dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/prev"
            android:scaleType="fitCenter"
            android:src="@drawable/prev" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

        </ScrollView>


        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/next"
            android:scaleType="fitCenter"
            android:src="@drawable/next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jawaban1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#327B6D"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/jawaban2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#327B6D"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jawaban3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="#327B6D"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/jawaban4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#327B6D"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/nomorSatu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/satu" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorDua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/dua" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorTiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/tiga" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorEmpat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/empat" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorLima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/lima" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorEnam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/enam" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorTujuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/tujuh" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/nomorDelapan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_number"
            android:src="@drawable/delapan" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btn_submit"
        android:textColor="@color/white" />
</LinearLayout>